tests/ui/suggestions/missing-type-param-used-in-param.stderr
error[E0107]: function takes 2 generic arguments but 1 generic argument was supplied
  --> $DIR/missing-type-param-used-in-param.rs:6:5
   |
LL |     two_type_params::<String>(100);
   |     ^^^^^^^^^^^^^^^   ------ supplied 1 generic argument
   |     |
   |     expected 2 generic arguments
   |
note: function defined here, with 2 generic parameters: `A`, `B`
  --> $DIR/missing-type-param-used-in-param.rs:3:4
   |
LL | fn two_type_params<A, B>(_: B) {}
   |    ^^^^^^^^^^^^^^^ -  -
help: add missing generic argument
   |
LL |     two_type_params::<String, _>(100);
   |                             +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0107`.
